Updated linke and demo picture.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div>
         <p>
         <!-- TODO make sure link is updated -->
-        Here is a walkthrough of running our profiler on a very simple ISPC program (alternatively, you can try out a live version <a href="http://71.61.183.40:8080/ispc/visualize.php?upload_id=1431243722&code=foo.ispc" target="_blank">here!</a>). We have 2 source code files, test.cpp and foo.ispc. The programmer compiles the code with <code>--profile</code> flag.
+        Here is a walkthrough of running our profiler on a very simple ISPC program (alternatively, you can try out a live version <a href="http://71.61.183.40:8080/ispc/visualize.php?upload_id=1431246116&code=foo.ispc" target="_blank">here!</a>). We have 2 source code files, test.cpp and foo.ispc. The programmer compiles the code with <code>--profile</code> flag.
         </p>
 
         <h3>test.cpp</h3>
@@ -299,7 +299,7 @@ export void foo(uniform double arr[], uniform int len) {
           <p>
             Clicking on specific lines in the source code displays detailed information about the profile region that line is in. 
           </p>
-          <img src="img/demo_switch.png" class="img-responsive">
+          <img src="img/demo_unmasked.png" class="img-responsive">
         </div>
 
         <br/>
