--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             ...
             ISPC_PROFILE_BEGIN(ISPC_PROFILE_ALL)
             [call ISPC function here] 
-            ISPC_PORFILE_END
+            ISPC_PROFILE_END
             ...
           </pre>
 
