Added links to repo.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-          <li><a href="https://docs.google.com/document/d/1MDnw4tY6oe8v3hR9yXYLxGCYyjICv0ytYov0Q7c9sdU/pub" target="_blank">Proposal/Checkpoint</a></li>
+          <li><a href="https://docs.google.com/document/d/1MDnw4tY6oe8v3hR9yXYLxGCYyjICv0ytYov0Q7c9sdU/pub" target="_blank">Proposal</a></li>
           <li><a href="#summary">Summary</a></li>
           <li><a href="#background">Background</a></li>
           <li><a href="#approach">Approach</a></li>
           <li><a href="#demo">Demo</a></li>
           <li><a href="#benchmark">Benchmarks</a></li>
           <li><a href="#references">References</a></li>
+          <li><a href="#code">Code</a></li>
         </div>
       </div>
     </div>
@@ -366,6 +367,16 @@ export void foo(uniform double arr[], uniform int len) {
           <li><a href="https://github.com/miloyip/rapidjson" target="_blank">rapidjson</a></li>
           <li><a href="https://software.intel.com/en-us/articles/intel-performance-counter-monitor" target="_blank">Intel Performance Counter Monitor</a></li>
           <li><a href="https://highlightjs.org/" target="_blank">highlight.js</a></li>
+        </ul>
+      </div>
+
+      <div id="code" class="page-header" style="padding-top: 40px; margin-top: -40px;">
+        <h2>Source Code</h2>
+      </div>
+      <div>
+        <ul>
+          <li><a href="https://github.com/kku1993/ispc" target="_blank">ISPC Compiler with Profiler</a></li>
+          <li><a href="https://github.com/kku1993/ispc_profiler" target="_blank">Visualizer</a></li>
         </ul>
       </div>
       
